Added Eureka Client Config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.application.name=mssc-brewery-gateway
-server.port=9898
+spring.application.name=sfg-brewery-gateway
+server.port=9090
+spring.profiles.active=local-discovery
 #spring.profiles.active=google
