--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,11 @@
 			<artifactId>spring-cloud-starter-gateway</artifactId>
 			<version>${spring-cloud.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>4.2.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
